tests/error/modulo_zero.gw
#! [contains] ZeroDivideException
[ 1%0, 2, 3, 4, 5 ];
